--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 ---
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
+</head>
 <h1>{{ page.title }}</h1>
 <p>{{ page.date | date_to_string }} - {{ page.author }}</p>
 
