--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -5,3 +5,11 @@
 p {
   font-family: 'Open Sans Condensed', sans-serif;
 }
+
+li {
+  font-family: 'Open Sans Condensed', sans-serif;
+}
+
+a {
+  font-family: 'Open Sans Condensed', sans-serif;
+}
