Added new post about the following command stuff
Exciting times y'all

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -18,6 +18,14 @@ h1 {
   font-family: 'Noto Sans', sans-serif;
 }
 
+h2 {
+  font-family: 'Noto Sans', sans-serif;
+}
+
+h3 {
+  font-family: 'Noto Sans', sans-serif;
+}
+
 nav a {
   width: auto;
   text-align: center;
